<resources>
    <string name="app_name">NTele</string>
    <string name="supra_telet">Supra Teletrack</string>
    <string name="mobile_number_verification">Verify your number</string>
    <string name="enter_the_otp">Enter the OTP sent to </string>
    <string name="help">Having trouble?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="create_account">Create Account</string>
    <string name="description">Your all-in-one app, bringing cluster data to your fingertips.</string>
    <string name="back_button_description">back button\n</string>
    <string name="welcome_to">Welcome to</string>
    <string name="supra_teletrack">Supra Teletrack</string>
    <string name="your_all_in_one_app_bringing_cluster">Your all-in-one app, bringing cluster</string>
    <string name="data_to_your_fingertips">data to your fingertips</string>
    <string name="register">Register</string>
    <string name="email_id_verification">Email ID Verification</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="register_link_text"><u>New user? Register here</u></string>
    <string name="login_link_text"><u>Already have an account? Login here</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="battery_level_title">Battery Level</string>
    <string name="Current_Location">Current Location</string>
    <string name="battery_level_detection">65%</string>
    <string name="progress_end">100%</string>
    <string name="progress_start">0%</string>
    <string name="cubbon_park">Cubbon Park</string>
    <string name="parked_status">Parked for 2h 20m</string>
    <string name="mileage">Mileage</string>
    <string name="co2_saved">CO2 Saved</string>
    <string name="total_distance">Total Distance</string>
    <string name="avg_speed">Avg Speed</string>
    <string name="seat_lock">Seat lock</string>
    <string name="vehicle_lock">Vehicle lock</string>
    <string name="handle_lock">Handle lock</string>
    <string name="immobilization">Immobilization</string>
    <string name="premium_subscription">Premium subscription</string>
    <string name="sos_alert">Auto-alert contacts in case of an emergency</string>
    <string name="my_vehicle">My Vehicle</string>
    <string name="trip_history">Trip history</string>
    <string name="alert_settings">Alert Settings</string>
    <string name="driver_analytics">Driver analytics</string>
    <string name="about_vehicle">About Vehicle</string>
    <string name="tpms">TPMS</string>
    <string name="notification">Notification</string>
    <string name="events_log">Events Log</string>
    <string name="last_travel">Last Travelled on</string>
    <string name="alert_setting_page_title">Alert Settings</string>
    <string name="speed_alert">Speed alert</string>
    <string name="soc_alert">SOC alert</string>
    <string name="contacts">Emergency contacts</string>
    <string name="geofence">Geofence alert</string>
    <string name="time_fence">Time fence alert</string>
    <string name="speed_alert_hint">50 km/h</string>
    <string name="time_fence_alert">Time fence alert</string>
    <string name="time_fence_hint">1:00 am - 4:00 pm</string>
    <string name="contacts_hint">3 contacts added</string>
    <string name="soc_hint">50%</string>
    <string name="suprateletrack">Supra Teletrack</string>
    <string name="mobile_number_login">Mobile Number Login</string>
    <string name="email_login">Email Login</string>
    <string name="or_continue_with">or continue with</string>
    <string name="send_otp">Send OTP</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="action_button">Action Button</string>


</resources>