<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".LoginOrRegistration">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="363dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/back_button_description"
        android:focusable="true"
        android:src="@drawable/back_button"
        tools:ignore="TouchTargetSizeCheck" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:src="@drawable/suprajit_logo_white" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:text="@string/welcome_to"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5sp"
        android:text="@string/supra_teletrack" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:text="@string/your_all_in_one_app_bringing_cluster"
        android:textColor="@color/sub_white"
        android:textSize="14sp"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8sp"
        android:text="@string/data_to_your_fingertips"
        android:textColor="@color/sub_white"
        android:textSize="14sp"
        tools:ignore="TextSizeCheck" />

    <!-- Button section fixed at the bottom -->
    <LinearLayout
        android:id="@+id/button_section"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20sp"
        android:paddingBottom="40sp">

        <Button
            android:id="@+id/login_button"
            android:layout_width="340sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="Login"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:background="@drawable/button_background"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/registration_button"
            android:layout_width="340sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:background="@drawable/button_background"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>



</RelativeLayout>
