<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_inverse">

    <!-- Header: Logo + App Name -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="50dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/suprajit_logo_white" />

        <TextView
            android:id="@+id/supra_telet"
            android:layout_width="wrap_content"
            android:layout_height="33sp"
            android:layout_marginStart="16dp"
            android:text="@string/supra_telet"
            android:fontFamily="@font/roboto_bold"
            android:textAppearance="@style/header_title"
            android:gravity="center_vertical" />
    </LinearLayout>

    <!-- Main Section with OTP -->
    <LinearLayout
        android:id="@+id/button_section"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/otp_inner_gradient"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/verify_your_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_id_verification"
            android:layout_marginStart="50dp"
            android:fontFamily="@font/roboto_regular"
            android:textAppearance="@style/verify_your_number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp">

            <TextView
                android:id="@+id/enter_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_the_otp"
                android:fontFamily="@font/roboto_regular"
                android:textAppearance="@style/enter_the_otp" />

            <TextView
                android:id="@+id/email_id_to_veify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="xyz@gmail.com"
                android:textColorHint="@color/hint"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_regular"
                android:textAppearance="@style/enter_the_otp" />
        </LinearLayout>

        <!-- OTP EditTexts -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:gravity="center">

            <EditText
                android:id="@+id/otp_1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="7dp"
                android:background="@drawable/otp_verify_boxes"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/otp_2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="7dp"
                android:background="@drawable/otp_verify_boxes"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/otp_3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="7dp"
                android:background="@drawable/otp_verify_boxes"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/otp_4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="7dp"
                android:background="@drawable/otp_verify_boxes"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/otp_5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="7dp"
                android:background="@drawable/otp_verify_boxes"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/otp_6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/otp_verify_boxes"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <!-- Verify Buttons -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/verify_button"
            android:layout_width="349dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/button_background_halfwhite"
            android:clickable="true"
            android:focusable="true"
            android:textStyle="bold"
            android:text="Verify" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/verify_button_clickable"
            android:layout_width="349dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:visibility="gone"
            android:background="@drawable/button_background_white"
            android:clickable="true"
            android:focusable="true"
            android:textStyle="bold"
            android:text="Verify" />

        <!-- Help + Timer + Resend OTP -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textAppearance="@style/help" />

            <TextView
                android:id="@+id/new_otp_request_timing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="00:24"
                android:textAppearance="@style/help" />

            <TextView
                android:id="@+id/resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/resend_otp"
                android:visibility="gone"
                android:textAppearance="@style/resend_otp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
